Fix issue header and quote styling on mobile

--- a/src/styles/components/blockquotes.scss
+++ b/src/styles/components/blockquotes.scss
@@ -11,6 +11,9 @@ blockquote {
 
     &.issue {
         border: 0;
+        display: block;
+        margin: 6rem auto;
+        max-width: 90%;
         padding: 0;
         text-align: center;
     }
