--- a/src/styles/components/pages.scss
+++ b/src/styles/components/pages.scss
@@ -16,6 +16,10 @@
         > p:first-of-type {
             margin-top: 0;
         }
+
+        h2 {
+            text-align: left;
+        }
     }
 
     .youtube-video-wrapper {
